--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-datepicker": "^7.5.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
